--- a/app.html
+++ b/app.html
@@ -32,9 +32,10 @@
     <div class="top-bar">
     <div class="top-bar-inner">
         <nav class="app-nav">
-            <a href="app.html" class="nav-item active" onclick="return false;">🎨 Estampas</a>
-            <a href="mockup.html" class="nav-item">👕 Mockups</a>
-        </nav>
+    <a href="app.html" class="nav-item active">🎨 Estampas</a>
+    <a href="mockup.html" class="nav-item">👕 Mockups</a>
+    <a href="copy.html" class="nav-item">✍️ Copy</a>
+</nav>
         <div class="user-area">
             <span class="user-greeting" id="userGreeting">Olá, Usuário</span>
             <button class="btn-logout" id="btnLogout" title="Sair">🚪 Sair</button>
