--- a/landing.html
+++ b/landing.html
@@ -12,10 +12,10 @@
     <nav class="navbar">
         <div class="container nav-wrapper">
             <div class="logo-group">
-                <img src="icon-512.png" alt="Logo" class="nav-logo-img">
+                <img src="icon-512.png" alt="PromptForge Icon" class="brand-icon">
                 <div class="logo">PROMPT<span>FORGE</span></div>
             </div>
-            <a href="index.html" class="btn-acesso">Acessar App</a>
+            <a href="https://saulofsilva86.github.io/promptforge/" class="btn-acesso">Acessar App</a>
         </div>
     </nav>
 
@@ -25,8 +25,8 @@
             <h1>Transforme ideias em <span class="gradient">Estampas de Elite</span></h1>
             <p>O primeiro ecossistema que une inteligência criativa, validação em mockup e estratégia de vendas em um fluxo contínuo e ultraveloz.</p>
             <div class="cta-group">
-            
-<a href="https://saulofsilva86.github.io/promptforge/" class="btn btn-primary">Entrar no Sistema Agora</a>
+                <a href="https://saulofsilva86.github.io/promptforge/" class="btn btn-primary">Começar Agora</a>
+                <a href="#metodo" class="btn btn-secondary">Conhecer o Método</a>
             </div>
         </div>
     </header>
@@ -35,25 +35,25 @@
         <div class="carousel-container">
             <div class="carousel-track">
                 <div class="slide"><img src="1.png" alt="Resultado 1"></div>
-                <div class="slide"><img src="2.png" alt="Resultado 2"></div>
-                <div class="slide"><img src="3.png" alt="Resultado 3"></div>
-                <div class="slide"><img src="4.png" alt="Resultado 4"></div>
-                <div class="slide"><img src="5.png" alt="Resultado 5"></div>
-                <div class="slide"><img src="6.png" alt="Resultado 6"></div>
-                <div class="slide"><img src="7.png" alt="Resultado 7"></div>
-                <div class="slide"><img src="8.png" alt="Resultado 8"></div>
-                <div class="slide"><img src="9.png" alt="Resultado 9"></div>
-                <div class="slide"><img src="10.png" alt="Resultado 10"></div>
-                <div class="slide"><img src="11.png" alt="Resultado 11"></div>
-                <div class="slide"><img src="12.png" alt="Resultado 12"></div>
-                <div class="slide"><img src="13.png" alt="Resultado 13"></div>
-                <div class="slide"><img src="14.png" alt="Resultado 14"></div>
-                <div class="slide"><img src="15.png" alt="Resultado 15"></div>
-                <div class="slide"><img src="16.png" alt="Resultado 16"></div>
-                <div class="slide"><img src="1.jpg" alt="Ref"></div>
-                <div class="slide"><img src="2.png" alt="Ref"></div>
-                <div class="slide"><img src="3.png" alt="Ref"></div>
-                <div class="slide"><img src="4.png" alt="Ref"></div>
+                <div class="slide"><img src="2.png" loading="lazy" alt="Resultado 2"></div>
+                <div class="slide"><img src="3.png" loading="lazy" alt="Resultado 3"></div>
+                <div class="slide"><img src="4.png" loading="lazy" alt="Resultado 4"></div>
+                <div class="slide"><img src="5.png" loading="lazy" alt="Resultado 5"></div>
+                <div class="slide"><img src="6.png" loading="lazy" alt="Resultado 6"></div>
+                <div class="slide"><img src="7.png" loading="lazy" alt="Resultado 7"></div>
+                <div class="slide"><img src="8.png" loading="lazy" alt="Resultado 8"></div>
+                <div class="slide"><img src="9.png" loading="lazy" alt="Resultado 9"></div>
+                <div class="slide"><img src="10.png" loading="lazy" alt="Resultado 10"></div>
+                <div class="slide"><img src="11.png" loading="lazy" alt="Resultado 11"></div>
+                <div class="slide"><img src="12.png" loading="lazy" alt="Resultado 12"></div>
+                <div class="slide"><img src="13.png" loading="lazy" alt="Resultado 13"></div>
+                <div class="slide"><img src="14.png" loading="lazy" alt="Resultado 14"></div>
+                <div class="slide"><img src="15.png" loading="lazy" alt="Resultado 15"></div>
+                <div class="slide"><img src="16.png" loading="lazy" alt="Resultado 16"></div>
+                <div class="slide"><img src="1.png" loading="lazy" alt="Ref"></div>
+                <div class="slide"><img src="2.png" loading="lazy" alt="Ref"></div>
+                <div class="slide"><img src="3.png" loading="lazy" alt="Ref"></div>
+                <div class="slide"><img src="4.png" loading="lazy" alt="Ref"></div>
             </div>
         </div>
     </section>
@@ -81,6 +81,28 @@
         </div>
     </section>
 
+    <section class="video-tutorial">
+    <div class="container">
+        <div class="video-header">
+            <h2 class="section-title">Domine o <span class="gradient">Método</span> na prática</h2>
+            <p class="video-subtitle">Assista ao tutorial completo e veja como escalar sua produção.</p>
+        </div>
+        
+        <div class="video-container-centered">
+            <div class="video-wrapper">
+                <iframe 
+                    src="https://www.youtube.com/embed/K6ByOv2UltI?si=NGoJ4wHUyT7RHmw5" 
+                    title="YouTube video player" 
+                    frameborder="0" 
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                    referrerpolicy="strict-origin-when-cross-origin" 
+                    allowfullscreen>
+                </iframe>
+            </div>
+        </div>
+    </div>
+</section>
+
     <section class="productivity">
         <div class="container">
             <h2>Sua mente cria, o Forge executa</h2>
@@ -99,10 +121,12 @@
 
     <footer class="footer">
         <div class="container">
-            <div class="logo-group" style="justify-content: center; margin-bottom: 20px;">
-                <img src="icon-512.png" alt="Logo" class="nav-logo-img">
+            <div class="logo-group" style="justify-content: center; margin-bottom: 25px;">
+                <img src="icon-512.png" alt="PromptForge Icon" class="brand-icon">
                 <div class="logo">PROMPT<span>FORGE</span></div>
             </div>
+            <p>Otimize seu tempo. Escale sua marca.</p>
+            <br>
             <a href="https://saulofsilva86.github.io/promptforge/" class="btn btn-primary">Entrar no Sistema</a>
         </div>
     </footer>
