--- a/landing.html
+++ b/landing.html
@@ -25,7 +25,7 @@
             <h1>Transforme ideias em <span class="gradient">Estampas de Elite</span></h1>
             <p>O primeiro ecossistema que une inteligência criativa, validação em mockup e estratégia de vendas em um fluxo contínuo e ultraveloz.</p>
             <div class="cta-group">
-                <a href="https://saulofsilva86.github.io/promptforge/" class="btn btn-primary">Começar Agora</a>
+                <a href="https://saulofsilva86.github.io/promptforge/planos.html" class="btn btn-primary">Começar Agora</a>
                 <a href="#metodo" class="btn btn-secondary">Conhecer o Método</a>
             </div>
         </div>
